examples/cors-filter/cors-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee-cors
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "https://www.foo.com"
        - "https://*.bar.com"
        allowMethods:
        - GET
        - POST
        allowHeaders:
        - "Keep-Alive"
        - "Content-Type"
        - "User-Agent"
        - "Authorization"
        exposeHeaders:
        - "Content-Security-Policy"
        allowCredentials: true
        maxAge: 10
    backendRefs:
    - name: coffee
      port: 80
